--- a/frontend/pals-plan-app/package.json
+++ b/frontend/pals-plan-app/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^5.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-autocomplete": "^2.7.4",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
