--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@googlemaps/places": "^1.10.0",
+    "axios": "^1.8.3",
     "express": "^4.21.2",
     "mongoose": "^8.12.1"
   }
