--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@googlemaps/places": "^2.0.1",
+    "axios": "^1.8.4",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.14.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.13.2",
     "nodemon": "^3.1.9",
     "openai": "^4.87.3"
   }
